Fix jumping scrollbar

--- a/src/index.css
+++ b/src/index.css
@@ -5,4 +5,5 @@ body {
 	font-size: 16px;
 	background-color: #f7f0e4;
 	color: #42413e;
+	overflow-y: scroll;
 }
